# lightning-yolo

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/lightning_yolo/: __init__.py  coco_datamodule.py  darknet_network.py  initialization.py  layers.py  loss.py  target_matching.py  torch_networks.py  types.py  utils.py  yolo_module.py
tests/: test_coco_datamodule.py  test_darknet_network.py  test_layers.py  test_loss.py  test_target_matching.py  test_torch_networks.py  test_utils.py  test_yolo_module.py
